# cs225a_project

./: README.md
OpenSaiProject/: .gitignore_global  (+1 more)
OpenSaiProject/core/sai-common/: .gitignore  CMakeLists.txt  README.md  SAI-COMMONConfig.cmake.in
OpenSaiProject/core/sai-common/.github/workflows/: generate_documentation.yml  upload_artifact.yml
OpenSaiProject/core/sai-common/custom_github_actions/dependencies/: action.yml
OpenSaiProject/core/sai-common/custom_github_actions/deploy_docs/: action.yml
OpenSaiProject/core/sai-common/custom_github_actions/sai-model/: action.yml
OpenSaiProject/core/sai-common/custom_github_actions/sai-primitives/: action.yml
OpenSaiProject/core/sai-common/custom_github_actions/sai-repositories/: action.yml
OpenSaiProject/core/sai-common/docs/: Doxyfile  docs_main.md
OpenSaiProject/core/sai-common/docs/examples/: 01-timer.md  02-filters.md  03-logger.md  04-redis_communication.md  05-timer_overtime_monitoring.md
OpenSaiProject/core/sai-common/examples/: CMakeLists.txt
OpenSaiProject/core/sai-common/examples/01-timer/: CMakeLists.txt  main.cpp
OpenSaiProject/core/sai-common/examples/02-filters/: CMakeLists.txt  example_signal.txt  main.cpp  plot_signals.py
OpenSaiProject/core/sai-common/examples/03-logger/: CMakeLists.txt  main.cpp
OpenSaiProject/core/sai-common/examples/04-redis_communication/: CMakeLists.txt  main.cpp
OpenSaiProject/core/sai-common/examples/05-timer_overtime_monitoring/: CMakeLists.txt  main.cpp
OpenSaiProject/core/sai-common/src/: SaiCommon.h
OpenSaiProject/core/sai-common/src/filters/: ButterworthFilter.cpp  ButterworthFilter.h
OpenSaiProject/core/sai-common/src/logger/: Logger.cpp  Logger.h
OpenSaiProject/core/sai-common/src/redis/: RedisClient.cpp  RedisClient.h
OpenSaiProject/core/sai-common/src/timer/: LoopTimer.cpp  LoopTimer.h
OpenSaiProject/core/sai-interfaces/: .gitignore  CMakeLists.txt  README.md  SAI-INTERFACESConfig.cmake.in
OpenSaiProject/core/sai-interfaces/docs/: config_files_details.md  docs_main.md  ui_overview.md
OpenSaiProject/core/sai-interfaces/docs/ui_elements_details/: ui_docs_menu.md
OpenSaiProject/core/sai-interfaces/examples/: AuxPandaSimvizOnly.cpp  CMakeLists.txt  MainRedisInterfaceExample.cpp
OpenSaiProject/core/sai-interfaces/examples/config_files/: aa_detailled_panda_control_only.xml  aa_detailled_panda_haptic_control.xml  aa_detailled_panda_simviz_only.xml  double_kuka_simviz_control.xml  humanoid_simviz_control.xml  panda_simviz_control.xml  pendulum_simviz_only.xml
OpenSaiProject/core/sai-interfaces/examples/world_files/: world_humanoid.urdf  world_kukas.urdf  world_panda.urdf  world_pendulums.urdf
OpenSaiProject/core/sai-interfaces/src/: MainRedisInterface.cpp  MainRedisInterface.h
OpenSaiProject/core/sai-interfaces/src/controller/: HapticDeviceControllerConfig.h  HapticDeviceControllerConfigParser.cpp  HapticDeviceControllerConfigParser.h  HapticDeviceControllerRedisInterface.cpp  HapticDeviceControllerRedisInterface.h  RobotControllerConfig.h  RobotControllerConfigParser.cpp  RobotControllerConfigParser.h  RobotControllerRedisInterface.cpp  RobotControllerRedisInterface.h
OpenSaiProject/core/sai-interfaces/src/helpers/: CommonConfigs.h  ConfigParserHelpers.cpp  ConfigParserHelpers.h
OpenSaiProject/core/sai-interfaces/src/simviz/: SimVizConfig.h  SimVizConfigParser.cpp  SimVizConfigParser.h  SimVizRedisInterface.cpp  SimVizRedisInterface.h
OpenSaiProject/core/sai-interfaces/ui/: csv_plotter.py  online_plot.py  redis_cache.py  requirements.txt  server.py  util.py
OpenSaiProject/core/sai-primitives/: .gitignore  CMakeLists.txt  README.md  SAI-PRIMITIVESConfig.cmake.in
OpenSaiProject/core/sai-primitives/.github/workflows/: upload_artifact.yml
OpenSaiProject/core/sai-primitives/docs/: Doxyfile
OpenSaiProject/core/sai-primitives/examples/: CMakeLists.txt
OpenSaiProject/core/sai-primitives/examples/01-joint_control/: 01-joint_control.cpp  CMakeLists.txt
OpenSaiProject/core/sai-primitives/examples/02-joint_control_internal_otg/: 02-joint_control_internal_otg.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/03-cartesian_motion_control/: 03-cartesian_motion_control.cpp  CMakeLists.txt
OpenSaiProject/core/sai-primitives/examples/04-task_and_redundancy/: 04-task_and_redundancy.cpp  CMakeLists.txt
OpenSaiProject/core/sai-primitives/examples/05-using_robot_controller/: 05-using_robot_controller.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/06-partial_joint_task/: 06-partial_joint_task.cpp  CMakeLists.txt  panda_arm_sliding_base.urdf  world.urdf
OpenSaiProject/core/sai-primitives/examples/07-surface_surface_contact/: 07-surface_surface_contact.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/08-partial_motion_force_task/: 08-partial_motion_force_task.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/09-3d_position_force_controller/: 09-3d_position_force_controller.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/10-3d_orientation_controller/: 10-3d_orientation_controller.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/11-planar_robot_controller/: 11-planar_robot_controller.cpp  CMakeLists.txt  rrrrbot.urdf  world.urdf
OpenSaiProject/core/sai-primitives/examples/15-haptic_control_impedance_type/: 15-haptic_control_impedance_type.cpp  CMakeLists.txt  world.urdf
OpenSaiProject/core/sai-primitives/examples/16-haptic_control_admittance_type/: 16-haptic_control_admittance_type.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
OpenSaiProject/core/sai-primitives/examples/17-bilateral_teleop_with_POPC/: 17-bilateral_teleop_with_POPC.cpp  CMakeLists.txt  panda_arm.urdf  world.urdf
OpenSaiProject/core/sai-primitives/ruckig/: CMakeLists.txt
OpenSaiProject/core/sai-primitives/src/: HapticDeviceController.cpp  HapticDeviceController.h  POPCBilateralTeleoperation.cpp  POPCBilateralTeleoperation.h  RobotController.cpp  RobotController.h  SaiPrimitives.h
(+180 files in other folders)
